# cda1tenth-hardware

./: .gitignore  README.md  sourecs.md
6ghz_wifi_install/: README.md  orin_wifi_install.txt  orin_wifi_kernel_build.txt  wlP1p1s0.network  wpas-example-6ghz.conf  wpas-wlP1p1s0.service
Design Files/3D files/3mf/: All_v2.3mf  Battery Cage_v7.3mf  Bottom Plate_v8.3mf  CDA1T_Bambu_Studio_Project.3mf  Camera Mount_v6.3mf  Front Bumpers_v9.3mf  Front Left Shroud_v7.3mf  Front Right Shroud_v6.3mf  Front Wheel Stub_v5.3mf  Front Wheel Washer_v5.3mf  Front Wheel_v5.3mf  Main Body_v9.3mf  Motor Connector 1_v3.3mf  Motor Connector 2_v2.3mf  Rear Bumper_v7.3mf  Rear Left Shroud_v6.3mf  Rear Right Shroud_v11.3mf  Rear Wheel - old collet_v9.3mf  Rear Wheel Nut_v9.3mf  Rear Wheel_v2.3mf  Sensor Plate_v8.3mf  Steering Rod_v2.3mf  Tires_v5.3mf  Wheel Hub Left_v6.3mf  Wheel Hub Right_v6.3mf
Design Files/3D files/STEP/: 12t Pinion_v3.step  55t gear_v1.step  Battery Cage_v10.step  Bottom Plate_v11.step  Bottom Plate_v12.step  Front Bumpers_v12.step  Front Left Shroud_v7.step  Front Wheel Stub_v5.step  Front Wheel Washer_v5.step  Front Wheel_v5.step  Main Body_v12.step  Motor connector 2_v5.step  Motor connector_v4.step  Pinion Clamp_v3.step  Rear Bumper_v10.step  Rear Bumper_v11.step  Rear Left Shroud v7.step  Rear Left Shroud_v6.step  Rear Right Shroud_v11.step  Rear Wheel - old collet_v9.step  Rear Wheel Nut_v9.step  Rear Wheel_v2.step  Sensor Plate_v11.step  Steering Dead Axle_v2.step  Steering Rod_v4.step  Stepper Spacer_v4.step  Tires_v5.step  Wheel Hub Left_v3.step  Wheel Hub Right_v3.step
Design Files/3D files/STL/: 55t gear_v1.stl  Battery Cage_v10.stl  Battery Cage_v12.stl  Front Right Shroud_v6.stl  Front Wheel Stub_v5.stl  Main Body_v12.stl  Motor connector 2_v5.stl  (+6 more)
Design Files/Notes and Guides/: 3D Printing Guide.docx  Written Assembly Notes.docx
Drawings-Notes-and-Guides/: Guidance for 3d Printing.docx  Guidance for Assembly.docx
Environment-Print-Files/Connectors-no-attachment/: curved.step  straight_to_tight_curve_left.step  straight_to_tight_curve_right.step
Environment-Print-Files/Connectors-with-attachments/: straight_to_tight_curve_with_top_left.step
OE-Design/: CDA1Tenth Field Assembly.step
Vehicle-Print-Files/STEP/: 55t gear_v1.step  Battery Cage_v12.step  Camera Mount ZEDM v3.step  Front Right Shroud_v6.step  Front Wheel Stub_v5.step  Front Wheel_v5.step  Lidar clip v4.step  Main Body_v13.step  Motor connector 2_v5.step  Motor connector_v4.step  Pinion Clamp_v3.step  Rear Wheel - old collet_v9.step  Sensor Plate RPLidar S2_v12.step  Steering Rod_v4.step  Steering Washer v1.step  Stepper Spacer_v4.step  Wheel Hub Right_v3.step
Vehicle-Print-Files/STL/: 12t Pinion_v3.stl  Camera Mount OakD Lite v5.stl  Camera Mount ZEDM v3.stl  Lidar clip v4.stl  Pinion Clamp_v3.stl  Rear Left Shroud v7.stl  Rear Right Shroud v12.stl  Rear Wheel - old collet_v9.stl  Rear Wheel Nut_v9.stl  Rear Wheel_v2.stl  Sensor Plate RPLidar S2_v12.stl  Sensor Plate RPLidar S3 v2.stl  Steering Dead Axle_v2.stl  Steering Washer v2.stl  Tires_v5.stl
micro-controller-firmware/: .gitignore  CMakeLists.txt  INTEGRATION_SUMMARY.md  README.md  debug_monitor.py  micro-ros-startup.sh  platformio.ini  test_platformio.ini
micro-controller-firmware/docs/: spi_optimization_guide.md  system_integration_guide.md
micro-controller-firmware/extra_packages/car_config_msg/: CMakeLists.txt  package.xml
micro-controller-firmware/extra_packages/car_config_msg/msg/: CarConfig.msg
micro-controller-firmware/extra_packages/car_state_msg/: CMakeLists.txt  package.xml
micro-controller-firmware/extra_packages/car_state_msg/msg/: CarState.msg
micro-controller-firmware/extra_packages/geometry_msg/: CMakeLists.txt  package.xml
micro-controller-firmware/extra_packages/geometry_msg/msg/: VehicleGeometry.msg
micro-controller-firmware/extra_packages/robot_state_msgs/: CMakeLists.txt  package.xml
micro-controller-firmware/extra_packages/robot_state_msgs/msg/: RobotState.msg
micro-controller-firmware/ros_node/: CMakeLists.txt  README.md  package.xml
micro-controller-firmware/ros_node/config/: car_params.yaml
micro-controller-firmware/ros_node/launch/: car_odometry.launch.py  car_system.launch.py  cmd_vel_filter.launch.py  test_robot_state_odometry.launch.py
micro-controller-firmware/ros_node/scripts/: test_cmd_vel_filter.py  test_odometry.py  test_robot_state_odometry.py
micro-controller-firmware/ros_node/src/: cmd_vel_filter.py  odometry_node.cpp  odometry_node.py
micro-controller-firmware/src/: OdomListener.py  car.cpp  car.h  command_queue.cpp  command_queue.h  connection_manager.cpp  connection_manager.h  debug.h  debug_manager.cpp  debug_manager.h  error_handler.cpp  error_handler.h  error_logger.cpp  error_logger.h  initializable.cpp  initializable.h  inter_core_comm.cpp  inter_core_comm.h  main.cpp  mutex_wrapper.cpp  mutex_wrapper.h  neopixel_led.cpp  neopixel_led.h  odometry.cpp  odometry.h  recovery_manager.cpp  recovery_manager.h  ros_comm_task.cpp  ros_comm_task.h  ros_interface.cpp  ros_interface.h  ros_logger.cpp  ros_logger.h  sensor_cache.cpp  sensor_cache.h  sensor_manager.cpp  sensor_manager.h  spi_manager.cpp  spi_manager.h  spi_optimization_example.cpp  (+14 more)
micro-controller-firmware/test/: micro_controller_monitor.py  mock_implementations.cpp  run_tests.cpp  test_inter_core_comm.cpp  test_ros_comm_task.cpp  test_ros_logger.cpp  test_spi_optimization.cpp  test_system_config.cpp  test_system_init.cpp  test_system_integration.cpp
systemd_startup/: 50-input.rules  README.md  joydev.ko  micro-ros-startup.service  micro-ros-startup.sh  teleop-joy-startup.service  teleop-joy-startup.sh  teleop-joy-startup.timer
(+79 files in other folders)
