<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
             schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>geometry_msg</name>
  <version>0.0.1</version>
  <description>ROS 2 interface-only package defining VehicleGeometry.msg</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- ament_cmake is still the build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- for generating code from .msg files -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>geometry_msgs</depend>

  <!-- mark this as an interface-only package -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <!-- tells ament this is a pure CMake package -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
